--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -450,6 +450,7 @@ a.button {
     border-radius: 5rem;
     padding: 0.1rem 1.1rem 0.25rem;
     text-decoration: none;
+    display: inline-block;
 }
 
 a.button:hover {
@@ -463,6 +464,10 @@ a.button:hover {
     background: var(--on-nav-bg);
     color: var(--logo-highlight);
     border-color: var(--border-intense);
+}
+
+a.button:active {
+    transform: scale(0.9);
 }
 
 .non-fields button {
