--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -640,11 +640,11 @@ p.sig {
 }
 
 *:invalid {
-    outline-color: var(--border-intense);
+    outline: var(--border-intense) solid 2px;
 }
 
 *:valid {
-    outline-color: var(#c3f73a);
+    outline: var(#c3f73a) solid 2px;
 }
 
 @supports not (-webkit-touch-callout: none) {
