--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -51,6 +51,10 @@ a.close-alert:active{
     text-decoration: none;
 }
 
+a.close-alert {
+    font-size: 1.2rem;
+}
+
 footer {
     font-size: 0.75rem;
 }
@@ -269,7 +273,11 @@ body {
 .site-alert {
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    align-items: center;
+}
+
+.site-alert * {
+    margin: 1rem;
 }
 
 
