--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -280,8 +280,6 @@ body {
     margin: 1rem 1.25rem;
 }
 
-
-
 header {
     position: sticky;
     top: 0;
@@ -677,6 +675,10 @@ p.sig {
     box-shadow: 0 0 0 3px #c3f73a;
     border-radius: 0.4rem;
     outline: none;
+}
+
+.strike {
+    text-decoration: line-through;
 }
 
 @supports not (-webkit-touch-callout: none) {
