--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -714,6 +714,10 @@ tr.adult-registrant {
     color: var(--on-nav-bg);
 }
 
+.print-registrants {
+    
+}
+
 @supports not (-webkit-touch-callout: none) {
     /* CSS for other than iOS devices */ 
     .parallax {
