--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -721,6 +721,7 @@ tr.adult-registrant {
 @media print {
     .page-break {
         break-after: always;
+        page-break-after: always;
     }
 }
 
