--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -720,6 +720,8 @@ tr.adult-registrant {
 
 .print-registrants h2 {
     font-size: 1rem;
+    background: var(--nav-bg);
+    color: var(--on-nav-bg);
 }
 
 @media print {
