--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -714,20 +714,26 @@ tr.adult-registrant {
     color: var(--on-nav-bg);
 }
 
-.print-registrants {
-
-}
-
 .print-registrants h2 {
     font-size: 1rem;
     background: var(--nav-bg);
     color: var(--on-nav-bg);
+    margin: 0;
+    padding: 0.25rem;
 }
 
 @media print {
     .page-break {
         break-after: always;
         page-break-after: always;
+    }
+
+    .print-registrants h2 {
+        font-size: 1rem;
+        background: var(--nav-bg);
+        color: var(--on-nav-bg);
+        margin: 0;
+        padding: 0.25rem;
     }
 }
 
