--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -730,10 +730,11 @@ tr.adult-registrant {
 .print-registrants table {
     border-collapse: collapse;
     border-style: hidden;
-  }
+}
 
-  .print-registrants table td {
-border: 1px solid black;
+.print-registrants table td {
+    border: 1px solid black;
+    width: 1.25in;
 }
 
 @media print {
