--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -730,6 +730,7 @@ tr.adult-registrant {
 .print-registrants table {
     border-collapse: collapse;
     border-style: hidden;
+    table-layout:fixed;
 }
 
 .print-registrants table td {
