--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -731,6 +731,7 @@ tr.adult-registrant {
     border-collapse: collapse;
     border-style: hidden;
     table-layout:fixed;
+    width: 7.5in;
 }
 
 .print-registrants table td {
