--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -725,6 +725,13 @@ tr.adult-registrant {
     grid-template-columns: repeat(6, 1.25in);
 }
 
+.print-grid h2 {
+    margin: 0;
+    padding: 0.25rem;
+    background: var(--lds-bg);
+    color: var(--on-nav-bg);
+}
+
 .print-field {
     display: grid;
     gap: 0.15rem;
