--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -755,6 +755,11 @@ tr.adult-registrant {
     padding: 0.15rem 0.25rem;
 }
 
+.print-field span {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 .print-field input + label {
     margin-left: 0.5rem;
 }
