--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -755,9 +755,8 @@ tr.adult-registrant {
     padding: 0.15rem 0.25rem;
 }
 
-.print-field span {
-    display: table-cell;
-    vertical-align: middle;
+.print-field input {
+    line-height: 0.9;
 }
 
 .print-field input + label {
