--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -755,18 +755,6 @@ tr.adult-registrant {
     padding: 0.15rem 0.25rem;
 }
 
-.print-field input, .print-field label, .print-field label + span {
-    vertical-align:middle;
-}
-
-.print-field input + label {
-    margin-left: 0.25rem;
-}
-
-.print-field label + input, .print-field label + span {
-    margin-left: 0.75rem;
-}
-
 .print-field.stmt {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
@@ -779,6 +767,17 @@ tr.adult-registrant {
 
 .print-field-phone div {
     display:grid;
+}
+.print-field-phone input, .print-field-phone label, .print-field-phone label + span {
+    vertical-align:middle;
+}
+
+.print-field-phone input + label {
+    margin-left: 0.25rem;
+}
+
+.print-field-phone label + input, .print-field-phone label + span {
+    margin-left: 0.75rem;
 }
 
 .print-field.left {
