--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -956,6 +956,10 @@ tr.adult-registrant {
     .about-content h2 {
         margin: 0 0 1rem;
     }
+
+    .about-content ul {
+        margin: 0;
+        padding: 0;    }
 }
 
 
