--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -808,7 +808,7 @@ tr.adult-registrant {
 .details {
     display: grid;
     grid-template-columns: auto auto auto;
-    gap: 1rem;
+    gap: 0.5rem 1rem;
 }
 
 @media print {
@@ -956,7 +956,7 @@ tr.adult-registrant {
     .about-content{
         display:grid;
         grid-template-columns: 1fr 1fr;
-        gap: 1rem;
+        gap: 2.5rem 1rem;
     }
 
     .about-content h2 {
