--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -719,7 +719,7 @@ label.owner {
 
 tr.adult-registrant {
     background: var(--nav-bg) !important;
-    color: var(--on-nav-bg);
+    color: var(--on-nav-bg) !important;
 }
 
 .print-registrants {
