--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -717,6 +717,11 @@ label.owner {
     margin-top: 3rem;
 }
 
+tr.atede-registrant {
+    background: var(--html-bg) !important;
+    color: var(--on-nav-bg) !important;
+}
+
 tr.adult-registrant {
     background: var(--nav-bg) !important;
     color: var(--on-nav-bg) !important;
