--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -717,7 +717,7 @@ label.owner {
     margin-top: 3rem;
 }
 
-tr.atede-registrant {
+tr.inactivated-registrant {
     background: var(--html-bg) !important;
     color: var(--on-nav-bg) !important;
 }
