--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -718,8 +718,7 @@ label.owner {
 }
 
 tr.inactivated-registrant {
-    background: var(--html-bg) !important;
-    color: var(--on-nav-bg) !important;
+    text-decoration: line-through;
 }
 
 tr.adult-registrant {
