--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -834,6 +834,13 @@ tr.adult-registrant {
         break-after: always;
         page-break-after: always;
     }
+
+    .event {
+        padding: 0;
+        border: 0;
+        margin-bottom: 0;
+        border-radius: 0;
+    }
 }
 
 @supports not (-webkit-touch-callout: none) {
