--- a/web/camps/css/style.css
+++ b/web/camps/css/style.css
@@ -288,6 +288,15 @@ body {
     margin: 1rem 1.25rem;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    align-items: center;
+}
+
 nav {
     position: sticky;
     top: 0;
@@ -921,7 +930,7 @@ tr.adult-registrant {
 
 @media only screen and (min-width: 50rem) {
 
-    nav {
+    nav, header {
         flex-direction: row;
         justify-content: space-between;
     }
