--- a/web/camps/css/style.css
+++ b/web/camps/css/style.css
@@ -288,18 +288,18 @@ body {
     margin: 1rem 1.25rem;
 }
 
-header {
+.sticky {
     position: sticky;
     top: 0;
+}
+
+header {
     display: flex;
     flex-direction: column;
-    justify-content: right;
     align-items: center;
 }
 
 nav {
-    position: sticky;
-    top: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
