--- a/web/camps/css/style.css
+++ b/web/camps/css/style.css
@@ -297,6 +297,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: var(--body-bg);
+    color: var(--on-body-bg);
 }
 
 nav {
