--- a/web/camps/css/style.css
+++ b/web/camps/css/style.css
@@ -184,6 +184,12 @@ footer a:active {
     color: var(--on-nav-bg-soft);
 }
 
+header a,
+header a:visited,
+header a:active {
+    color: var(--on-body-bg);
+}
+
 a.close-alert,
 a.close-alert:visited,
 a.close-alert:active,
