--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -343,7 +343,11 @@ section {
 
 .hidden,
 .nav-hidden {
-    display: none;
+    display: none !important;
+}
+
+.esig-img {
+    display: block;
 }
 
 .nav-hide {
