--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -532,7 +532,7 @@ a.button:active {
 
 .non-fields button:active,
 .btn-primary:active,
-.btn-default:active, {
+.btn-default:active {
     transform: scale(.9);
 }
 
