--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -527,7 +527,7 @@ a.button:active {
 .btn-primary,
 .btn-default {
     padding: 0.25rem;
-    border: none;
+    border: 1px solid var(--body-bg);
     outline: none;
 }
 
