--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -376,6 +376,13 @@ section {
 img.esig {
     transform: scale(2.0) translateX(1rem);
     background: #ffffff00;
+    max-width: 100%;
+    height: 1rem;
+}
+
+.qr-code {
+    max-width: 100%;
+    height: 1rem;
 }
 
 .nav-hide {
