--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -385,6 +385,10 @@ img.esig {
     height: 1.5rem;
 }
 
+.qr-code:hover {
+    transform: scale(3.0);
+}
+
 .camp-yr-logo .qr-code {
     margin-right: 1rem;
 }
