--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -385,12 +385,13 @@ img.esig {
     height: 2rem;
 }
 
-.qr-code:hover {
-    transform: scale(3.0);
+.qr-hover:hover .qr-code{
+    transform: scale(6.0);
     position: fixed;
     top: 50%;
     left: 50%;
-    border: 4px solid var(--border-intense);
+    border: 2px solid var(--border-intense);
+    border-radius: 0.2rem;
 }
 
 .camp-yr-logo .qr-code {
