--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -385,13 +385,20 @@ img.esig {
     height: 2rem;
 }
 
-.qr-hover:hover .qr-code{
+.qr-hover:hover .qr-code {
     transform: scale(6.0);
     position: fixed;
     top: 50%;
     left: 50%;
     border: 2px solid var(--border-intense);
     border-radius: 0.2rem;
+}
+
+.qr-code.qr-border {
+    border: 2px solid var(--border-intense);
+    border-radius: 0.2rem;
+    max-width: 100%;
+    height: 12rem;
 }
 
 .camp-yr-logo .qr-code {
