--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -395,10 +395,11 @@ img.esig {
 }
 
 .qr-code.qr-border {
-    border: 2px solid var(--border-intense);
-    border-radius: 0.2rem;
+    border: 12px solid var(--logo-highlight);
+    border-radius: 1.2rem;
     max-width: 100%;
     height: 12rem;
+    margin: 1rem;
 }
 
 .camp-yr-logo .qr-code {
