--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -380,6 +380,11 @@ img.esig {
     height: 1.5rem;
 }
 
+.qr-flex {
+    display: flex;
+    align-items: center;
+}
+
 .qr-code {
     max-width: 100%;
     height: 2rem;
