--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -387,11 +387,11 @@ img.esig {
 
 .qr-code {
     max-width: 100%;
-    height: 2rem;
+    height: 2.5rem;
 }
 
 .qr-hover:hover .qr-code {
-    transform: scale(6.0);
+    transform: scale(4.8) translate(-5px, -5px);
     position: fixed;
     top: 50%;
     left: 50%;
