--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -385,18 +385,8 @@ img.esig {
     align-items: center;
 }
 
-.qr-code {
-    max-width: 100%;
-    height: 2.5rem;
-}
-
-.qr-hover:hover .qr-code {
-    transform: scale(4.8) translate(-5px, -5px);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    border: 2px solid var(--border-intense);
-    border-radius: 0.2rem;
+.qr-code.qr-hidden {
+    display: none;
 }
 
 .qr-code.qr-border {
@@ -969,6 +959,24 @@ tr.adult-registrant {
 
     .equipment-lists-interactive ul{
         margin: 1rem 1rem 1rem 2.75rem;
+    }
+
+    .qr-code.qr-hidden {
+        display: inline;
+    }
+    
+    .qr-code {
+        max-width: 100%;
+        height: 2.5rem;
+    }
+    
+    .qr-hover:hover .qr-code {
+        transform: scale(4.8) translate(-5px, -5px);
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        border: 2px solid var(--border-intense);
+        border-radius: 0.2rem;
     }
  }
 
