--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -1056,8 +1056,17 @@ tr.adult-registrant {
         max-width: 100%;
         height: 2.5rem;
     }
-    
-    .qr-hover:hover .qr-code {
+
+    input[type=checkbox].qr-trig {
+        position: absolute;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+        opacity: 0;
+    }
+
+    input[type=checkbox]:checked.qr-trig ~ .qr-code {
         transform: scale(4.8) translate(-5px, -5px);
         position: fixed;
         top: 50%;
