--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -382,7 +382,10 @@ img.esig {
 
 .qr-flex {
     display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: center;
     align-items: center;
+    align-content: center;
 }
 
 .qr-div {
