--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -282,7 +282,10 @@ header a:hover {
 .all-schedules a:active,
 .about a,
 .about a:visited,
-.about a:active{
+.about a:active
+.scripture a,
+.scripture a:visited,
+.scripture a:active {
     color: var(--on-nav-bg);
 }
 
