--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -917,6 +917,7 @@ tr.adult-registrant {
 .details {
     display: grid;
     grid-template-columns: auto auto auto;
+    grid-template-rows: auto 1fr;
     gap: 0.5rem 1rem;
 }
 
