--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -916,8 +916,8 @@ tr.adult-registrant {
 
 .details {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto 1fr;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto 1fr;
     gap: 0.5rem 1rem;
 }
 
