--- a/web/css/style.css
+++ b/web/css/style.css
@@ -931,6 +931,23 @@ tr.adult-registrant {
     margin: 0.5rem 0;
 }
 
+.video {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .gallery .gallery-container {
     position: relative;
 }
