--- a/web/css/style.css
+++ b/web/css/style.css
@@ -936,6 +936,7 @@ tr.adult-registrant {
     overflow: hidden;
     width: 100%;
     padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+    margin-bottom: 2rem;
 }
 
 .responsive-iframe {
