--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1012,6 +1012,7 @@ tr.adult-registrant {
 
 .gallery .row {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .gallery .demo {
