--- a/web/css/style.css
+++ b/web/css/style.css
@@ -950,7 +950,7 @@ tr.adult-registrant {
     height: 100%;
 }
 
-.gallery .gallery-container {
+.gallery .gallery-img-container {
     position: relative;
 }
 
